--- a/src/app/saving-throws/saving-throws.component.html
+++ b/src/app/saving-throws/saving-throws.component.html
@@ -1,6 +1,5 @@
 <div class="contentComponent">
-  <div class="row"
-    *ngFor="let statElem of statElements">
+  <div class="row" *ngFor="let statElem of statElements">
     <div class="col-2">
       <input class="form-check-input" type="checkbox"
         (change)="isChecked($event, statElem)">
