--- a/src/app/homepage-sheet/homepage-sheet.component.html
+++ b/src/app/homepage-sheet/homepage-sheet.component.html
@@ -52,7 +52,10 @@
           [statElements]="statList">
         </other-characteristics-detail>
 
-        <attacks-spellcasting></attacks-spellcasting>
+        <attacks-spellcasting
+          [statElements]="statList"
+          [proficiencyBonusUp]="proficiencyBonus">
+        </attacks-spellcasting>
       </div>
       
       <div class="col">
